--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </div>
     
     <div id="startScreen">
-        <h1>Drone Flight Game</h1>
+        <h1>Drone Flight Game - By Prof. Rahul M. Samant</h1>
         <p>Navigate your drone through obstacles without crashing!</p>
         <h2>Controls:</h2>
         <p>W, A, S, D - Move the drone</p>
